PROTON-2005: fix pn_delivery_abort() for multiframe and session outgoing bytes